[package]
name = "weather-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
futures = "0.3.28"
hyper = "0.14.27"
lazy_static = "1.4.0"
prometheus-client = "0.21.2"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
serde = { version = "1.0.188", features = ["derive"] }
serde-this-or-that = "0.4.2"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
